--- a/package.json
+++ b/package.json
@@ -221,7 +221,6 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
@@ -238,6 +237,7 @@
     "react-konva-utils": "^0.3.0",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.24",
+    "zundo": "^1.5.9",
     "zustand": "^4.0.0-rc.0"
   },
   "devEngines": {
