--- a/package.json
+++ b/package.json
@@ -233,6 +233,7 @@
     "projen": "^0.54.41",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-konva": "^18.0.0-0",
     "react-konva-utils": "^0.3.0",
     "react-router-dom": "^6.3.0",
