updating package name

--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.5.0",
-  "description": "A foundation for scalable desktop apps",
+  "name": "the-cdk-lightbox",
+  "version": "0.1.0",
+  "description": "A viewer for your CDK Apps",
   "main": "./dist/main/main.js",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "The CDK Lightbox",
+    "email": "matthew.bonig@gmail.com",
+    "url": "https://github.com/mbonig/cdklightbox"
   },
   "scripts": {
     "electron-rebuild": "node -r ts-node/register ../../.erb/scripts/electron-rebuild.js",
