updating publish workflow for yarn and newer actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,17 +16,17 @@ jobs:
 
     steps:
       - name: Checkout git repo
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Install Node and NPM
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: npm
+
 
       - name: Install dependencies
         run: |
-          npm install
+          yarn install
 
       - name: Publish releases
         env:
