--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
   "name": "the-cdk-lightbox",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "A viewer for your CDK Apps",
   "main": "./dist/main/main.js",
   "author": {
     "name": "The CDK Lightbox",
     "email": "matthew.bonig@gmail.com",
-    "url": "https://github.com/mbonig/cdklightbox"
+    "url": "https://github.com/mbonig/lcars"
   },
   "scripts": {
     "electron-rebuild": "node -r ts-node/register ../../.erb/scripts/electron-rebuild.js",
